# KafkaPlayground

./: .gitignore  KAFKA-LIBRARIES.md  KafkaNotes.txt  KafkaPlayground.sln  README.md  notes-kafka.md  nuget.config
MockOidcServer/: MockOidcServer.csproj  MockOidcServer.http  OidcController.cs  Program.cs
MockOidcServer/Properties/: launchSettings.json
c/: Makefile  consumer.c
cpp/: CMakeLists.txt  Makefile
cpp(libkafka-asio)/: fetch_cxx11.cpp
doc/: Status(2024-09-12).md  status 2024-09-12.md
docker/MyKafka/: Dockerfile  build.cmd
docker/cluster1/: kafka-1.bat  kafka-1.env  kafka-2.bat  kafka-2.env
docker/compose-cluster-strimzi/: compose.yml
docker/compose-cluster1/: compose.yml  (+1 more)
dotnet/: .gitignore  AdminClient.cs  AdminSettings.cs  Consumer.cs  Consumer1.cs  Consumer1Settings.cs  ConsumerSettings.cs  ConsumerTask.cs  KafkaSettings.cs  KafkaTool.csproj  KafkaTool.sln  Producer.cs  Producer1.cs  Producer1Settings.cs  Producer2.cs  Producer2Settings.cs  Producer3.cs  Producer3Settings.cs  ProducerConsumer.cs  ProducerConsumerData.cs  ProducerConsumerSettings.cs  ProducerSequential.cs  ProducerSequentialSettings.cs  ProducerSettings.cs  ProducerStringTask.cs  ProducerTask.cs  Program.cs  README.md  ReporterTask.cs  Utils.cs  dotnet.sln  kafka.ini  nuget.config
java/: README.md
python/: README.md  pyproject.toml
python/src/kafka_tool/: __init__.py  __main__.py  cli.py  consumer.py  consumer_task.py  data.py  polling_admin_client.py  polling_producer.py  producer.py  producer_consumer.py  producer_task.py  reporter_task.py  settings.py  utils.py
(+70 files in other folders)
